Fix extra padding on right caused by skills

--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -32,7 +32,6 @@
 }
 .skills {
   display: flex;
-  width: 400px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
